#18 fixed radio buttons overflow

--- a/src/blocks/radio-buttons/radio-buttons.scss
+++ b/src/blocks/radio-buttons/radio-buttons.scss
@@ -40,6 +40,7 @@
     content: '';
     position: absolute;
     left: 0;
+    top: 0;
     min-width: 1.4286rem;
     min-height: 1.4286rem;
     width: min-content;
@@ -54,7 +55,7 @@
     display: none;
     content: '';
     position: absolute;
-    top: 0.1429rem;
+    top: 0.2857rem;
     left: 0.2857rem;
     min-width: 0.8571rem;
     min-height: 0.8571rem;
